--- a/scss/_header1.scss
+++ b/scss/_header1.scss
@@ -96,9 +96,9 @@ color: $purple;
 }
 
 .about:hover {
-color: $purple;
+color: $pink;
 }
 
 .contact:hover {
-color: $purple;
+color: $lightPink;
 }
